--- a/index.html
+++ b/index.html
@@ -9,10 +9,78 @@
   </head>
   <body>
     <div class="wrapper">
+      <header class="header">
+        <div class="header__container"></div>
+      </header>
       <main class="page">
         <section class="page__section page__section_1">
-          <h1 class="page__title"></h1>
-          <div class="page__text"></div>
+          <h1 class="page__title">Отличная статья</h1>
+          <div class="page__text">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              fugiat sequi maxime dolorum blanditiis, accusantium quod quidem
+              asperiores sunt esse placeat expedita accusamus eligendi sit fugit
+              eum tempore, perspiciatis et.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              fugiat sequi maxime dolorum blanditiis, accusantium quod quidem
+              asperiores sunt esse placeat expedita accusamus eligendi sit fugit
+              eum tempore, perspiciatis et.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              fugiat sequi maxime dolorum blanditiis, accusantium quod quidem
+              asperiores sunt esse placeat expedita accusamus eligendi sit fugit
+              eum tempore, perspiciatis et.
+            </p>
+          </div>
+        </section>
+        <section class="page__section page__section_2">
+          <h2 class="page__sub-title">Отличный раздел сайта</h2>
+          <div class="page__text">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              fugiat sequi maxime dolorum blanditiis, accusantium quod quidem
+              asperiores sunt esse placeat expedita accusamus eligendi sit fugit
+              eum tempore, perspiciatis et.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              fugiat sequi maxime dolorum blanditiis, accusantium quod quidem
+              asperiores sunt esse placeat expedita accusamus eligendi sit fugit
+              eum tempore, perspiciatis et.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              fugiat sequi maxime dolorum blanditiis, accusantium quod quidem
+              asperiores sunt esse placeat expedita accusamus eligendi sit fugit
+              eum tempore, perspiciatis et.
+            </p>
+          </div>
+        </section>
+        <section class="page__section page__section_3">
+          <h2 class="page__sub-title">Замечательный раздел сайта</h2>
+          <div class="page__text">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              fugiat sequi maxime dolorum blanditiis, accusantium quod quidem
+              asperiores sunt esse placeat expedita accusamus eligendi sit fugit
+              eum tempore, perspiciatis et.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              fugiat sequi maxime dolorum blanditiis, accusantium quod quidem
+              asperiores sunt esse placeat expedita accusamus eligendi sit fugit
+              eum tempore, perspiciatis et.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              fugiat sequi maxime dolorum blanditiis, accusantium quod quidem
+              asperiores sunt esse placeat expedita accusamus eligendi sit fugit
+              eum tempore, perspiciatis et.
+            </p>
+          </div>
         </section>
       </main>
     </div>
